--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
       rel="stylesheet"
   />
+  <link rel="icon" href="./images/drum-icon.png">
 </head>
 
 <body>
